# BFO-matrix

./: CMakeLists.txt  README.md
src/: color_gradient.c  color_gradient.h  constants.h  default_themes.c  default_themes.h  get_git_name.sh  main.c  print_raindrop.c  print_raindrop.h  rain.c  rain.h  random_letter.c  random_letter.h  signal_redifinition.c  signal_redifinition.h
